gtk/sass/3.22/_misc.scss
/* ... */
// /************
//  * Deja-dup *
//  ************/

window > box.vertical > box.vertical > widget > grid.vertical {
  > expander > scrolledwindow {
    min-height: rem(160.0px); // enlarge widget height
    border: 1px solid $borders_color; // draw borders
  }
}


// /******************
//  * Gnome-Terminal *
//  ******************/

terminal-window {
  // FIXME: In XWayland mode, downstream 'transparency' patch causes
  // solid outer margin artifact when users keep enabling transparent
  // background.
  &.csd.background { background-color: transparent; }

  &.background:not(.csd),
  vte-terminal { // set the same background with decorations
    background-color: $inverted_dark_color;
    color: $inverted_fg_color;
  }

  notebook > header.top { // show drop-shadows
    @if $variant==light {
      box-shadow: inset 0 2px 2px -3px rgba(0, 0, 0, 0.29),
                  inset 0 5px 3px -5px rgba(0, 0, 0, 0.57),
                  inset 0 -1px $borders_color;
    }
    @else {
      box-shadow: inset 0 2px 2px -3px rgba(0, 0, 0, 0.26),
                  inset 0 5px 3px -5px rgba(0, 0, 0, 0.39),
                  inset 0 -1px $borders_color;
    }

    tab.reorderable-page {
      &:hover {
        @if $variant==light {
          box-shadow: inset 0 2px 2px -3px rgba(0, 0, 0, 0.29),
                      inset 0 5px 3px -5px rgba(0, 0, 0, 0.57),
                      inset 0 -1px $borders_color;
        }
        @else {
          box-shadow: inset 0 2px 2px -3px rgba(0, 0, 0, 0.26),
                      inset 0 5px 3px -5px rgba(0, 0, 0, 0.39),
                      inset 0 -1px $borders_color;
        }
      }
      &:checked {
        @if $variant==light {
          box-shadow: -1px 0 2px rgba(0, 0, 0, 0.02),
                      -1px 0 4px rgba(0, 0, 0, 0.02),
                      1px 0 2px rgba(0, 0, 0, 0.02),
                      1px 0 4px rgba(0, 0, 0, 0.02),
                      inset 0 2px 2px -3px rgba(0, 0, 0, 0.29),
                      inset 0 5px 3px -5px rgba(0, 0, 0, 0.57),
                      inset 0 -1px $borders_color;
        }
        @else {
          box-shadow: -1px 0 2px rgba(0, 0, 0, 0.02),
                      -1px 0 4px rgba(0, 0, 0, 0.03),
                      1px 0 2px rgba(0, 0, 0, 0.02),
                      1px 0 4px rgba(0, 0, 0, 0.03),
                      inset 0 2px 2px -3px rgba(0, 0, 0, 0.26),
                      inset 0 5px 3px -5px rgba(0, 0, 0, 0.39),
                      inset 0 -1px $borders_color;
        }
      }
    }
  }

  scrollbar { // always use dark-variant
    background-color: gtkopacity($inverted_base_color, 0.55);

    slider {
      background-color: gtkopacity($inverted_fg_color, 0.55 * 0.5);
      &:hover {
        background-color: gtkopacity($inverted_secondary_fg_color, 0.55);
      }
      &:active { background-color: $inverted_fg_color; }
    }
  }
}


// /*****************
//  * Gnome-Weather *
//  *****************/

window > grid.vertical > stack > stack > grid.vertical {
  // allocated 128px x 128px?
  > spinner {
    min-height: $icon_size;
    padding: 56px 0;
  }
}

frame#weather-page-content-view {
  &, &:backdrop {
    .linked.osd.stack-switcher {
      background: transparent;

      > button.radio.text-button { // remove underlines
        border-image: none;
        &:hover,
        &:active { border-image: none; }
        &:checked {
          border-image: -gtk-gradient(radial,
                                      center bottom, 0,
                                      center bottom, 0.5,
                                      to(currentColor),
                                      to(transparent))
                                      0 0 2 / 0 0 2px;
        }
        &:disabled { border-image: none; }
      }
    }

    button.osd {
      @extend %button_flat_normal;
      min-width: $icon_size;
      min-height: $icon_size;
      padding: rem($icon_size);
      border-radius: 100px;
      -gtk-outline-radius: 100px;
      background-color: transparent;
      &:hover { @extend %button_flat_hover; }
      &:active { @extend %button_flat_active; }
      &:checked { @extend %button_flat_checked; }
      &:disabled { @extend %button_flat_disabled; }
    }

    frame#weekly-forecast-frame { background: transparent; }
  }
}
/* ... */

